refactor(数据): 修改验证逻辑
